# todo-app-hackthon2

./: .env.example  .env.local.template  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.hf  HUGGING_FACE_DEPLOYMENT.md  Makefile  PHASES_10_11_12_COMPLETE.md  PHASE_10_11_COMPONENTS.md  QWEN.md  README.md  URDU_TRANSLATION_IMPLEMENTATION.md  URDU_TRANSLATION_TEST_GUIDE.md  docker-compose.phase5.yml  docker-compose.yml  init-data.sh  install-wsl.sh  main.py  prometheus-rules.yml  prometheus.yml  pyproject.toml  test-urdu.sh  test_urdu_api.py  test_urdu_translation.py  tmpclaude-41f7-cwd  verify_apis.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  restart_backend.bat  restart_backend.sh  run_migration.py  start-unix.sh  start-windows.bat  start.ps1  test_auth_fallback.py
backend/migrations/: add_guided_state.py
backend/src/agent/: __init__.py  chat_agent.py
backend/src/api/: deps.py  main.py
backend/src/api/routes/: __init__.py  activity.py  attachments.py  categories.py  chat.py  health.py  statistics.py  subtasks.py  tags.py  tasks.py
backend/src/config/: cloudinary_config.py
backend/src/db/: session.py
backend/src/db/migrations/: env.py
backend/src/mcp/: __init__.py  base.py  tools.py
backend/src/models/: __init__.py  attachment.py  category.py  conversation.py  enums.py  message.py  subtask.py  tag.py  task.py  task_activity.py  task_tag.py  user.py
backend/src/services/: __init__.py  activity_log_service.py  attachment_service.py  category_service.py  chat_service.py  statistics_service.py  subtask_service.py  tag_service.py  task_service.py
backend/src/services/dapr/: __init__.py  pubsub_service.py  state_service.py
backend/src/services/kafka/: __init__.py  consumer.py  (+3 more)
backend/src/utils/: date_parser.py  file_validator.py  recurrence.py
backend/tests/: README.md  test_all_apis.py  test_chat_agent.py  test_chat_api.py
backend/tests/integration/: __init__.py  test_dapr_integration.py  test_kafka_integration.py
(+361 files in other folders)
